--- a/libdev/public/index.html
+++ b/libdev/public/index.html
@@ -59,6 +59,14 @@ crossorigin="anonymous">
         }
       }
     </script>
+    <script>
+      window.onclick = function(event) {
+        if(event.target == document.querySelector(".modal")) {
+          document.querySelector(".modal-image").src= null;
+          document.querySelector(".modal").style.display = "none";
+        }
+      }
+    </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"></script>
